[gd_scene load_steps=2 format=3 uid="uid://e8q6y4n2x5m6w"]

[ext_resource type="Script" path="res://src/scenes/campaign/components/ActionButton.gd" id="1_a5m3r"]

[node name="ActionButton" type="Control"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5m3r")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Button/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="IconRect" type="TextureRect" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Action"
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Button/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="CooldownOverlay" type="ColorRect" parent="Button"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="ProgressArc" type="TextureProgressBar" parent="Button"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
value = 50.0
fill_mode = 4
nine_patch_stretch = true 